5~6，笔记1用markdown进行补充

--- a/数组与字符串/笔记1.md
+++ b/数组与字符串/笔记1.md
@@ -1,54 +1,164 @@
 # 数组与字符串
 
-## 0.python的print换行：
-## 示例问题
-**斐波那契数列：**
+### 0. python的print换行：
+对于print函数，在Python中，结尾有一个默认但不直接显示的赋值，**end="\n"**，即自动换行。 
+
+普通的Print语句，例如print("Hello.")，实际上相当于**print("Hello.",end="\n")**。
+如果不希望在print之后执行换行，可以通过print("Hello.", end="")的方式规制结尾符，则不会换行。
+
+**例**：`print("Hello World.", end="");`
+
+---
+
+### 1. 常用字符的ASCII码：
+| 字符      | ASCII码(范围)         |
+|---------|--------------------|
+| 大写字母A-Z | 65~90              |
+| 小写字母a-z | 在大写字母基础上+32：97~122 |
+| 数字0-9   | 48~57              |
+ | 空格      | 32                 |
+
+---
+### 2. “0”数组与空数组:
+要设定为所有数值为0的数值型数组：`[0]*N`
+
+对于全部为字符型的数组，如果要设置为全为0，就是字符型的0: `["0"]*N`
+
+空数组:`[ ]*N`
+
+---
+### 3. 数组的切片：
+切片的基本格式为 **[a:b:c]**。其中a与b为切片的下标索引，c为切片的步长，a为起点下标，b为终点下标前一个位置，python的切片是**半开区间规则**。
+
+c表示**切片数组中两个元素在原数组中对应的下标的差值**，例如S[0:5:2]，起点下标为0，终点下标为4，步长为2，从0开始数，经过2个单位长度取一个元素，0-1-2
+，最终取得元素S[0]，S[2]，S[4]。
+
+切片会自动处理越界溢出的情况：返回相应的空数组，不会有index error。
+
+其他应用了半开区间规则的情况：
+
++ ***range函数***：range(A,B,C)，生成一个迭代对象序列，作用的范围是A~B-1，不包括终止位置，步长为C。
+
++ ***zip函数***：zip(A,B)，将多个可迭代对象，如列表、元组等，打包为一个迭代器。每次迭代返回一个元组，包含来自各个可迭代对象的元素。
+若可迭代对象的长度不一致，则zip操作会停在最短可迭代对象的终点处。
+```
+a=[1,2,3]
+b=["a","b","c","d"]
+zip(a,b)=[(1,"a"),(2,"b"),(3,"c")]
+```
++ ***字典相关的函数***：dict.items()，dict.keys()，dict.values()，原理与range函数类似。
+---
+
+### 4. -1在数组中的作用：
+**-1放在数组的索引当中使用，表示当前数组当中最后一个元素的索引。**
+
+同理，-2，-3等也可以表示倒数第二，倒数第三个元素的位置的索引。
+
+若是**步长为负数**的情况下，则执行函数会从右往左地遍历元素，但要求*起始元素的下标必须比终止元素大*，
+例如[4:0:-1]，会生成一个从第4个元素从前往后读至第一个元素的列表；如果是[2:3:-1]，则会报错，因为不能从前面的索引再往前搜索而得到后面的索引。
 ```python
-def fibonacci(n):
-    dp = [0] * (n + 1)
-    dp[1] = 1
-    for i in range(2, n + 1):
-        dp[i] = dp[i - 1] + dp[i - 2]
-    return dp[n]
-    
-    对于print函数，在Python中，结尾有一个默认但不直接显示的赋值，end="\n"，即自动换行。
-    正常的Print语句，例如print("Hello.")，实际上相当于print("Hello.",end="\n").
-    如果不希望在print之后执行换行，可以通过print("Hello.", end="")的方式规制结尾符，则不会换行。
+S = [1,2,3,4]
+A = S[4:0:-1] #execution is successful
+B = S[2:3:-1] #throw index error
+```
+---
+### 5.可迭代对象：
+#### 列举一些常见的内置容器型的可迭代对象：
+1. **列表(list):**
+定义方式为*list = \[A,B,C\]*，集合中的元素可以是任意类型，也可以是其他的嵌套容器。集合的元素是**有序**的，
+可以通过索引来进行访问与修改。
+```python
+# 空列表
+my_list = []
 
-1.大写字母的ASCII码：65~91；
-   小写字母的ASCII码在此基础上+32；数字0~9的ASCII码，48~57
+# 列表可以包含不同类型的元素
+my_list = [1, "Python", 3.14, [1, 2]]
+```
+2. **元组(tuple):**
+定义方式为*tuple = \(A,B,C\)*，元组的元素是**不可变**的，元素在定义后不可被修改，如果*定义元组时只有一个元素，必须加上逗号*，否则会被视为是普通的数据类型。
+```python
+# 元组定义
+empty_tuple = (1,2,3)
+# 单元素元组
+single_tuple = (1,)
+```
 
-2.长度为N的0数组的定义:
-    [0]*N，全部为字符型的数组:["0"]*N，空数组:[]*N
+3. **字典(dict)**
+定义方式为*dict = \{K1:V1, K2:V2...\}*，用于存储复数个键值对，**键必须为不可变的类型**，如str, int, tuple等。值可以为任意类型。
+```python
+# 空字典
+dict1 = {}
 
-3.数组的切片：
-    [a:b:c]，其中a与b为切片的下标索引，c为切片的步长，a为起点下标，b为终点下标前一个位置，因为python的切片是半开区间规则
-切片c表示切片数组中两个元素在原数组中对应的下标的差值，例如S[0:5:2]，起点下标为0，终点下标为4，步长为2，从0开始数，经过2个单位长度取一个元素，0-1-2
-，最终取得元素S[0]，S[2]，S[4]
-切片会自动处理越界溢出的情况：返回相应的空数组，不会有index error
+# 含有键值对的字典
+dict2 = {"name": "Alice", "age": 25}
 
-TIPS：其他应用了半开区间规则的情况：
-    range函数：range(A,B)，生成一个序列，作用的范围是A~B-1，不包括终止位置。
+# 嵌套字典，值也可以是一个字典
+my_dict = {"user": {"name": "Alice", "age": 25}, "score": [100, 95]}
 
-    zip函数：zip(A,B)，将多个可迭代对象，如列表、元组等，打包为一个迭代器。每次迭代返回一个元组，包含来自各个可迭代对象的元素。若可迭代对象的长度
-不一致，则zip操作会停在最短可迭代对象的终点处。
-    a=[1,2,3]
-    b=["a","b","c","d"]
-    zip(a,b)=[(1,"a"),(2,"b"),(3,"c")]
+```
+4. **集合(set)**
+定义方式为*set = \{A,B,C\}(也是花括号)*，与字典定义的区别在于，空集合需要通过函数set()函数来进行创建。
+**集合中的元素无序且唯一**。
+```python
+# 空集合（只能用 set()，不能用 {}）
+empty_set = set()
 
-    字典相关的函数：dict.items()，dict.keys()，dict.values
+# 集合自动去重
+my_set = {1, 2, 2, 3}  # {1, 2, 3}
+```
+6. **字符串(str)：**
+用单引号’，双引号‘’，或是三引号‘’‘来进行表示，**字符串不可变**，可将字符串转换为列表然后对其进行修改与访问。
 
-4.-1在python数组中表示倒数最后一个位置的索引
-    同理，-2，-3等也可以表示倒数第二，倒数第三个元素的位置的索引。，步长为负数的情况下，会从右往左地遍历元素，但要求起始元素的下标必须比终止元素大，
-    例如[4:0:-1]，如果是[2:3:-1]，则会报错，因为不能从前面的索引再往前搜索而得到后面的索引。
+***字符串的不变性的含义：***
+本质上，属于**内存级别**的不可变性，字符串对象一旦创建，其内容在内存中是固定的，无法直接修改。每次对字符串进行“修改”（如切片、拼接、替换等）时，都会生成一个新的字符串对象，而不是修改原有对象。
+原字符串对象的内存地址不会变化，但新的字符串会分配新的内存空间，相当于**多生成一个新的副本**，而不是直接改动原始字符串。
+#### 字符串的修改方法之一：split+join
+```python
+s = "hello world"
+parts = s.split(" ")  # 分割成 ['hello', 'world']
+parts[1] = "Python"   # 修改其中一个部分
+s = " ".join(parts)   # 拼接成新的字符串
+print(s)  # 输出：hello Python
+```
 
-5.对于集合，字典等这样的可迭代对象，不能通过用下标进行索引的方法来对元素进行访问，因为它们之中的元素没有顺序。
+对于***集合，字典***等这样的可迭代对象，*不能通过用下标进行索引的方法来对元素进行访问*，因为它们之中的元素没有顺序，也因此索引对这些迭代对象不适用。
 
-6. enumerate迭代函数：返回一个索引和元素对的迭代器，可以用来同时访问列表中的索引和值。
-    s = ['a', 'b', 'c']
-    for idx, val in enumerate(s):
-        print(idx, val)
-    返回结果：
-    0 a
-    1 b
-    2 c
+对于集合，字典这类的迭代对象，访问其中的元素的方法最好是通过*in*来进行检测。
+
+---
+### 6. enumerate迭代函数：
+返回一个索引和元素对的迭代器，可以用来同时访问列表中的索引位置和相对应的值。
+
+enumerate(A,B)：其中A为必须项，必须有值且必须为一个可迭代对象，B为可选项，索引起始位置。
+```
+s = ['a', 'b', 'c']
+for idx, val in enumerate(s):
+    print(idx, val)
+```
+返回结果：
+```
+0 a
+1 b
+2 c
+```
+enumerate可以与列表推导式相结合:
+```python
+items = ['apple', 'banana', 'cherry']
+indexed_items = [(i, v) for i, v in enumerate(items, start=1)]
+print(indexed_items)
+```
+用于查找元素及其相应的索引：
+```python
+items = ['apple', 'banana', 'cherry']
+
+for index, value in enumerate(items):
+    if value == 'banana':
+        print(f"'banana' is at index {index}")  #需要引用变量值的print语句
+```
+
+#### 注意：enumerate()最终返回的是一个迭代器，并不是直接的列表或者元组类型，如果要转换为这些类型，需list()等函数进行类型转换。
+对字典：字典本身是一个无序的键值对集合，直接使用 enumerate() 会默认**枚举字典的键**。如果要同时获取字典中元素的键，可以用items()。
+
+对集合：集合与字典一样是无序的可迭代对象类型集合，用enumerate进行迭代时，最终返回的元素顺序任意（依赖于哈希值）
+
+#### 但是，enumerate(A,start)的start索引本身却不受字典集合影响，对字典集合一样可以指定start索引，因为这个start仅仅是enumerate返回的迭代器的索引，并不是原迭代对象的索引。
