--- a/华为机试题/数组与字符串/笔记1.md
+++ b/华为机试题/数组与字符串/笔记1.md
@@ -162,3 +162,17 @@ for index, value in enumerate(items):
 对集合：集合与字典一样是无序的可迭代对象类型集合，用enumerate进行迭代时，最终返回的元素顺序任意（依赖于哈希值）
 
 #### 但是，enumerate(A,start)的start索引本身却不受字典集合影响，对字典集合一样可以指定start索引，因为这个start仅仅是enumerate返回的迭代器的索引，并不是原迭代对象的索引。
+
+---
+### 7.进制数：
+
+不同进制的数会在前面加上对应的前缀进行表示，属于约定俗成的规则。
+
+| 进制   | 表示例      |
+|------|----------|
+| 十进制  | 57       |
+| 二进制  | 0b101101 |
+| 八进制  | 0o175    |
+| 十六进制 | 0xAD08   |
+
+读取不同进制数前先提取出前缀判断出读取的数的进制类型，以字符串读取时从第三位开始。
