--- a/华为机试题/数组与字符串/笔记1.md
+++ b/华为机试题/数组与字符串/笔记1.md
@@ -85,6 +85,7 @@ single_tuple = (1,)
 
 3. **字典(dict)**
 定义方式为*dict = \{K1:V1, K2:V2...\}*，用于存储复数个键值对，**键必须为不可变的类型**，如str, int, tuple等。值可以为任意类型。
+给字典添加新的键值对的方式是：***dict[key]=value***.
 ```python
 # 空字典
 dict1 = {}
@@ -93,8 +94,10 @@ dict1 = {}
 dict2 = {"name": "Alice", "age": 25}
 
 # 嵌套字典，值也可以是一个字典
-my_dict = {"user": {"name": "Alice", "age": 25}, "score": [100, 95]}
+dict3 = {"user": {"name": "Alice", "age": 25}, "score": [100, 95]}
 
+# 给字典添加新的键值对
+dict2["Dad"]="David"
 ```
 4. **集合(set)**
 定义方式为*set = \{A,B,C\}(也是花括号)*，与字典定义的区别在于，空集合需要通过函数set()函数来进行创建。
@@ -176,3 +179,30 @@ for index, value in enumerate(items):
 | 十六进制 | 0xAD08   |
 
 读取不同进制数前先提取出前缀判断出读取的数的进制类型，以字符串读取时从第三位开始。
+
+---
+### 8.Sorted排序：
+Python的内置排序函数，基于***Timsort***来进行排序，时间复杂度最佳为为O(n)，最差为O(nlogn)，平均情况为O(nlogn)，接近**归并排序**的复杂度。
+默认排序为升序，可以指定reverse=True使排序变为降序。
+
+Sorted的参数key：
+实际上key是一个函数，对排序的迭代对象的每个元素进行预处理，然后转为一个值，以此为依据进行排序。属于稳定排序。
+```python
+#按字符串的长度进行排序
+words = ["apple", "banana", "kiwi"]
+words.sort(key=len)
+print(words)  # 输出: ['kiwi', 'apple', 'banana']
+
+#按元组第二个元素排序
+pairs = [(1, 3), (3, 2), (2, 1)]
+pairs.sort(key=lambda x: x[1])
+print(pairs)  # 输出: [(2, 1), (3, 2), (1, 3)]
+
+#按字典中的键进行排序
+dicts = {"Mum":"Mary","Dad":"Jack","Son":"Tom"}
+sorted_list = sorted(dicts.keys())
+sorted_dict = dict(sorted(dicts.items(), key=lambda item: item[0]))
+print(sorted_list) # 输出: ['Dad','Mum','Son']
+print(sorted_dict) # 输出：{'Dad': 'Jack', 'Mum': 'Mary', 'Son': 'Tom'}
+```
+---
