--- a/华为机试题/数组与字符串/笔记1.md
+++ b/华为机试题/数组与字符串/笔记1.md
@@ -66,7 +66,7 @@ B = S[2:3:-1] #throw index error
 #### 列举一些常见的内置容器型的可迭代对象：
 1. **列表(list):**
 定义方式为*list = \[A,B,C\]*，集合中的元素可以是任意类型，也可以是其他的嵌套容器。集合的元素是**有序**的，
-可以通过索引来进行访问与修改。
+可以通过索引来进行访问与修改。**_可以用in,not in等函数来验证某个元素是否存在于可迭代对象中。_**
 ```python
 # 空列表
 my_list = []
@@ -204,5 +204,58 @@ sorted_list = sorted(dicts.keys())
 sorted_dict = dict(sorted(dicts.items(), key=lambda item: item[0]))
 print(sorted_list) # 输出: ['Dad','Mum','Son']
 print(sorted_dict) # 输出：{'Dad': 'Jack', 'Mum': 'Mary', 'Son': 'Tom'}
+```
+---
+### 9.split()分割与相应搭配的函数:
+将字符串分割为子字符串，并将结果以**列表**的形式来返回。
+
+标准形式：***split(separator, max-split)***，其中separator为分隔符，max-split为最大分割段数。
+
+separator：指定分隔符。如果不指定，默认为任何空白字符（如空格、制表符、换行符等）。
+
+max-split：指定最大分割次数。如果提供该参数，split()会将字符串分割成最多max-split+1个部分。默认值为-1，表示没有分割数量限制。例如对字符串"A,
+B,C,D"，用split(",",2)，因为分割2次，所以分割结果为列表["A","B","C,D"]，只对前2个出现的逗号进行分割。
+
+```python
+#不指定split的参数时，按空白字符分割
+text = "Hello World Python"
+result = text.split()
+print(result)  # 输出: ['Hello', 'World', 'Python']
+
+#指定特定分隔符与分割次数
+text = "apple,banana,orange,pear"
+result = text.split(",", 2)
+print(result)  # 输出: ['apple', 'banana', 'orange,pear']
+
+#若指定的分隔符在原本的字符串中不存在，则会直接返回整个字符串作为单一列表元素
+text = "apple banana orange"
+result = text.split(",")
+print(result)  # 输出: ['apple banana orange']
+```
+#### 与split()搭配的函数:
+**_join()_**: 与split()相对的操作，它将多个字符串合并成一个字符串。通常用于将列表中的元素用特定的分隔符连接起来。
+```python
+# join的示例，在调用上与split有所不同，先指定分隔符再为join指定合并的可迭代对象
+words = ['apple', 'banana', 'orange']
+result = ", ".join(words)
+print(result)  # 输出: "apple, banana, orange"
+```
+**_strip()_**: 用于去除字符串两端的空白字符。与split()配合时，常用于先清理字符串，再分割。
+```python
+text = "   Hello World   "
+result = text.strip().split()
+print(result)  # 输出: ['Hello', 'World']
+```
+**_map()_**: 返回的是一个**迭代器(map 对象)**，表示对可迭代对象中的每个元素应用指定函数后的结果。因为结果本身不是可迭代对象，所以需要使用类似list()等方法将之转换。
+```python
+text = "1,2,3,4,5" # 字符串
+iterable = text.split(",")
+function = int()
+map(function, iterable)
+# function：对可迭代对象当中的每个元素执行的函数
+# iterable：需要处理的可迭代对象，如元组，列表，字符串等
+
+# 用list等方法转换为可迭代对象后可以正常显示
+print(list(map(int,iterable))) # 输出[1,2,3,4,5]，数值型
 ```
 ---
