--- a/华为机试题/数组与字符串/笔记1.md
+++ b/华为机试题/数组与字符串/笔记1.md
@@ -10,7 +10,12 @@
 
 ---
 
-### 1. 常用字符的ASCII码：
+### 1. 常用字符的ASCII码及ASCII码的提取转换：
+
+**将整数值的ascii码转换为相应的字符：chr()函数**
+
+**获取字符型变量的ascii码值：ord()函数**
+
 | 字符      | ASCII码(范围)         |
 |---------|--------------------|
 | 大写字母A-Z | 65~90              |
@@ -18,6 +23,7 @@
 | 数字0-9   | 48~57              |
  | 空格      | 32                 |
 
+ 
 ---
 ### 2. “0”数组与空数组:
 要设定为所有数值为0的数值型数组：`[0]*N`
