--- a/华为机试题/数组与字符串/字典相关.md
+++ b/华为机试题/数组与字符串/字典相关.md
@@ -35,7 +35,7 @@ for i in range(0, len(string)):
 
 ## Setdefault方法制定规则
 
-***如果需要统计字符出现情况，以及其出现位置***，此时可用字典，键值对中的值则为列表，存放字典出现的下标。
+### ***如果需要统计字符出现情况，以及其出现位置***，此时可用字典，键值对中的值则为列表，存放字典出现的下标。
 
 可以用***setdefault***方法来定义字典创建键值对时的规则：
 ```python
@@ -50,6 +50,21 @@ for i in range(0,len(a)):
 
 # 结果返回：ch={("a",[0,5]),("A",[1,4]),("d",[2]),("b",[3])}
 ```
+
+### ***setdefault也可以用来统计字符串中每个字符的出现次数：***
+```python
+s = "hello world"
+count = {}
+
+for ch in s:
+    count[ch] = count.setdefault(ch, 0) + 1
+
+print(count)
+
+#结果
+{'h': 1, 'e': 1, 'l': 3, 'o': 2, ' ': 1, 'w': 1, 'r': 1, 'd': 1}
+```
+
 ---
 ## 字典的访问
 
@@ -140,4 +155,26 @@ app_sort = sorted(ch,key=sort_key)
 #先比较第一个位置，因为a在bc前，所以a和A两个键值对被排在最前，又因为0<1，所以a又在A前
 #最终sorted返回一个列表["a", "A", "b", "c"]
 #sorted虽然在排序时会进行转换，但并不覆盖原值，所以最后A并没有变成a，而是依照顺序返回了原键值
+```
+
+---
+## ***lambda简易函数***
+
+使用 lambda 最常见于你不想单独定义一个函数名，只是想临时传一个处理逻辑进去，比如排序、过滤、转换等。
+
+它等价于一个普通函数的精简写法：
+
+```python
+# 普通函数写法
+def f(x):
+    return x + 1
+
+# lambda写法
+f = lambda x: x + 1
+
+# 配合 sorted() 按字典值排序
+d = {'a': 3, 'b': 1, 'c': 2}
+sorted_items = sorted(d.items(), key=lambda x: x[1])
+# 按照值（x[1]）进行排序
+
 ```
